--- a/ResultTypes.CodeAnalysis.Tests/ResultTypes.CodeAnalysis.Tests.csproj
+++ b/ResultTypes.CodeAnalysis.Tests/ResultTypes.CodeAnalysis.Tests.csproj
@@ -6,9 +6,18 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+
+        <OutputType>Library</OutputType>
+
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.NUnit" Version="1.1.1" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.NUnit" Version="1.1.1" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeRefactoring.Testing.NUnit" Version="1.1.1" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.NUnit" Version="1.1.1" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.4.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
@@ -21,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ResultTypes.CodeAnalysis\ResultTypes.CodeAnalysis.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+        <ProjectReference Include="..\ResultTypes.CodeAnalysis\ResultTypes.CodeAnalysis.csproj" />
     </ItemGroup>
 
 </Project>
