--- a/ResultTypes.Playground/ResultTypes.Playground.csproj
+++ b/ResultTypes.Playground/ResultTypes.Playground.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ResultTypes\ResultTypes.csproj" />
+        <ProjectReference Include="..\ResultTypes\ResultTypes.csproj"/>
+        <ProjectReference Include="..\ResultTypes.CodeAnalysis\ResultTypes.CodeAnalysis.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer"/>
     </ItemGroup>
 
 </Project>
