--- a/RandomNumbers.Tests/RandomNumbers.Tests.csproj
+++ b/RandomNumbers.Tests/RandomNumbers.Tests.csproj
@@ -23,4 +23,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\RandomNumbers\RandomNumbers.csproj" />
+    </ItemGroup>
+
 </Project>
