--- a/Noise/Noise.csproj
+++ b/Noise/Noise.csproj
@@ -4,12 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>Ironclad.RandomNumbers</AssemblyName>
-        <RootNamespace>Ironclad.RandomNumbers</RootNamespace>
+        <AssemblyName>IronClad.Noise</AssemblyName>
+        <RootNamespace>IronClad.Noise</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Noise\Noise.csproj" />
-    </ItemGroup>
 
 </Project>
