more readme namespace correction

--- a/Noise.Analysis/Noise.Analysis.csproj
+++ b/Noise.Analysis/Noise.Analysis.csproj
@@ -5,8 +5,8 @@
         <TargetFramework>net8.0-windows</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>IronClad.Noise.Analysis</AssemblyName>
-        <RootNamespace>IronClad.Noise.Analysis</RootNamespace>
+        <AssemblyName>Ironclad.Noise.Analysis</AssemblyName>
+        <RootNamespace>Ironclad.Noise.Analysis</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
