adjusted action file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Extract Version From .nuspec
         id: extract_version
         run: |
-          version=$(grep -oPm1 "(?<=<version>)[^<]+" YourProject.nuspec)
+          version=$(grep -oPm1 "(?<=<version>)[^<]+" ./Noise/Ironclad.Noise.nuspec)
           echo "version=$version" >> $GITHUB_ENV
 
       - name: Check if Version Exists Already
         run: |
-          exists=$(curl -s https://api.nuget.org/v3-flatcontainer/yourpackageid/${{ env.version }}/index.json | grep -c '404')
+          exists=$(curl -s https://api.nuget.org/v3-flatcontainer/Ironclad.Noise/${{ env.version }}/index.json | grep -c '404')
           if [ "$exists" -eq 0 ]; then
             echo "Error: Version ${{ env.version }} already exists on NuGet."
             exit 1
