--- a/Noise/Noise.csproj
+++ b/Noise/Noise.csproj
@@ -18,4 +18,10 @@
         <RepositoryType>git</RepositoryType>
     </PropertyGroup>
 
+
+    <ItemGroup>
+      <None Remove="README.md" />
+      <Content Include="README.md" />
+    </ItemGroup>
+
 </Project>
