--- a/Noise/Noise.csproj
+++ b/Noise/Noise.csproj
@@ -7,18 +7,18 @@
     <AssemblyName>Ironclad.Noise</AssemblyName>
     <RootNamespace>Ironclad.Noise</RootNamespace>
     <LangVersion>12</LangVersion>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
-  
+
   <PropertyGroup>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/ArdorDeosis/Ironclad/tree/master/Noise</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <None Include="README.md" Pack="True" PackagePath="\"/>
+    <None Update="nuget-readme.md" Pack="True" PackagePath="\"/>
   </ItemGroup>
-  
+
 </Project>
