--- a/RandomNumbers/RandomNumbers.csproj
+++ b/RandomNumbers/RandomNumbers.csproj
@@ -1,15 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <AssemblyName>Ironclad.RandomNumbers</AssemblyName>
-        <RootNamespace>Ironclad.RandomNumbers</RootNamespace>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <AssemblyName>Ironclad.RandomNumbers</AssemblyName>
+    <RootNamespace>Ironclad.RandomNumbers</RootNamespace>
+    <LangVersion>12</LangVersion>
+    <Version>1.0.0-rc.1</Version>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\Noise\Noise.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>nuget-readme.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ArdorDeosis/Ironclad/tree/master/RandomNumbers</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="nuget-readme.md" Pack="True" PackagePath="\"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ironclad.Noise" Version="1.0.2" />
+  </ItemGroup>
 
 </Project>
