--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,49 +12,20 @@ on:
           - RandomNumbers
 
 jobs:
-  run-tests:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set Up .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
       - name: Run Tests
         run: dotnet test ./${{ github.event.inputs.package_name }}.Tests/${{ github.event.inputs.package_name }}.Tests.csproj --configuration Release
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: run-tests
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Set Up .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.x'
-
-      - name: Pack
-        run: dotnet pack ./${{ github.event.inputs.package_name }}/${{ github.event.inputs.package_name }}.csproj --configuration Release --output ./packages
-
-      - name: Push to NuGet
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: dotnet nuget push ./packages/${{ github.event.inputs.package_name }}.*.nupkg --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json
-
-  tag-versions:
-    runs-on: ubuntu-latest
-    needs: publish
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
 
       - name: Get Version
         id: get_version
@@ -62,7 +33,15 @@ jobs:
           VERSION=$(dotnet list package --include-transitive | grep -m1 '${{ github.event.inputs.package_name }}' | awk '{print $3}')
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Tag the version
+      - name: Pack
+        run: dotnet pack ./${{ github.event.inputs.package_name }}/${{ github.event.inputs.package_name }}.csproj --configuration Release --output ./packages
+
+      - name: Push to NuGet
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+        run: dotnet nuget push ./packages/Ironclad.${{ github.event.inputs.package_name }}.${{ env.VERSION }}.nupkg --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json
+
+      - name: Set Version Tag
         run: |
           git tag ${{ github.event.inputs.package_name }}-v${{ env.VERSION }}
           git push origin ${{ github.event.inputs.package_name }}-v${{ env.VERSION }}
