--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Get Version
         id: get_version
         run: |
-          VERSION=$(dotnet msbuild ./${{ github.event.inputs.package_name }}/${{ github.event.inputs.package_name }}.csproj -t:GetPackageVersion -nologo -v:q | grep -oP '(?<=Project/Package Version: ).*')
+          VERSION=$(dotnet msbuild ./${{ github.event.inputs.package_name }}/${{ github.event.inputs.package_name }}.csproj -t:GetPackageVersion -nologo | grep -oP '[^\s]+')
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Pack
