--- a/RandomNumbers/RandomNumbers.csproj
+++ b/RandomNumbers/RandomNumbers.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>Ironclad.RandomNumbers</AssemblyName>
     <RootNamespace>Ironclad.RandomNumbers</RootNamespace>
     <LangVersion>12</LangVersion>
-    <Version>1.0.0-rc.1</Version>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup>
