--- a/Collections/Collections.csproj
+++ b/Collections/Collections.csproj
@@ -1,12 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <AssemblyName>Ironclad.Collections</AssemblyName>
-        <RootNamespace>Ironclad.Collections</RootNamespace>
-        <LangVersion>default</LangVersion>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <AssemblyName>Ironclad.Collections</AssemblyName>
+    <RootNamespace>Ironclad.Collections</RootNamespace>
+    <LangVersion>12</LangVersion>
+    <Version>0.0.1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>nuget-readme.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ArdorDeosis/Ironclad/tree/master/Collections</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="nuget-readme.md" Pack="True" PackagePath="\"/>
+  </ItemGroup>
 
 </Project>
